(tests
 (names
  closest_points_test
  convex_hull_test
  disjoint_sets_test
  edit_distance_test
  geometry_2d_test
  geometry_3d_test
  maths_test
  list_sorting_test
  longest_common_subsequence_test
  maximum_subarray_test
  primes_test
  vector_2d_test
  vector_3d_test)
 (libraries oUnit algolib))

(env
 (dev
  (flags
   (:standard -warn-error -A -w +A))))
