(tests
 (names
  binomial_heap_test
  closest_points_test
  convex_hull_test
  deque_test
  disjoint_sets_test
  edit_distance_test
  geometry_2d_test
  geometry_3d_test
  indexed_list_test
  integers_test
  leftist_heap_test
  list_sorting_test
  longest_common_subsequence_test
  maximum_subarray_test
  pairing_heap_test
  primes_searching_test
  primes_testing_test
  vector_2d_test
  vector_3d_test)
 (libraries oUnit testUtils algolib))

(env
 (dev
  (flags
   (:standard -warn-error -A -w +A-70))))
